- Docker ClickDigitalBackend: updated initailization file of payara server with context root. To change context root, change init_1_generate.. with desired context path "DEPLOY_STATEMENT="deploy --contextroot=/development/clickdigital/api /opt/payara/deployments/ClickDigitalBackend_war_exploded""

--- a/ClickDigitalDockerImageCreation/backend/ClickDigitalBackend_war_exploded/WEB-INF/classes/config.properties
+++ b/ClickDigitalDockerImageCreation/backend/ClickDigitalBackend_war_exploded/WEB-INF/classes/config.properties
@@ -5,7 +5,8 @@
 
 
 #comment/uncomment if you want or don't want to use the server (clickdigital.igd.fraunhofer.de) hosted database and the backend is deployed on the same server
-#for docker use
+
+#for docker use - !!!!!!!!!!
 MONGO_DB_CONNECTION_STRING=mongodb://db:27017
 #MONGO_DB_CONNECTION_STRING=mongodb://localhost:27017
 
