--- a/ClickDigitalDockerImageCreation/docker-compose.yml
+++ b/ClickDigitalDockerImageCreation/docker-compose.yml
@@ -9,7 +9,7 @@ services:
           - "27017:27017"
           
     backend:
-        image: docker-activage.satrd.es/clickdigital-backend:integrated_7
+        image: docker-activage.satrd.es/clickdigital-backend:integrated_8
         build: ./backend
         container_name: clickdigital-backend
         ports:
@@ -18,10 +18,11 @@ services:
           - db
 
     frontend:
-        image: docker-activage.satrd.es/clickdigital-frontend:integrated_7
+        image: docker-activage.satrd.es/clickdigital-frontend:integrated_10
         build: ./frontend
         container_name: clickdigital-frontend
         environment:
+          - HTTP_MODE=http://
           - BASE_URL=localhost:9999
           - KEYCLOAK_URL=https://aiotes.igd.fraunhofer.de:8081/auth
           - KEYCLOAK_REALM=activage
